# every-discord-bot

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
src/: config.rs  lib.rs  main.rs
src/ai/: channel.rs  db.rs  gemini.rs  mod.rs
src/commands/: help.rs  loop_cmd.rs  mod.rs  nowplaying.rs  pause.rs  play.rs  queue.rs  remove.rs  resume.rs  shuffle.rs  skip.rs  stop.rs  volume.rs
src/commands/tarkov/: ammo.rs  boss.rs  craft.rs  hideout.rs  item.rs  map.rs  mod.rs  price.rs  quest.rs  questitem.rs  trader.rs
src/events/: component.rs  mod.rs  voice_state.rs
src/music/: mod.rs  player.rs  queue.rs  source.rs
src/tarkov/: catalog.rs  client.rs  embed.rs  mod.rs  models.rs  queries.rs
src/utils/: components.rs  embed.rs  mod.rs
tests/: command_flow.rs  command_registration.rs  config_test.rs  yt_dlp_integration.rs
