[package]
name = "every-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "voice", "rustls_backend"] }
poise = "0.6"
songbird = { version = "0.4", features = ["driver", "serenity", "gateway", "rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
